# hackBigData

./: DocumentacaoV1.md  README.md
notebooks/: notebook-v1.ipynb  pyproject.toml
