[project]
name = "hackBigData"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "duckdb>=1.3.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "prophet>=1.1.7",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.5",
]
